# tello_fase_1

./: .gitignore  .gitmodules  README.md
base_localization/: README.md  package.xml  setup.cfg  setup.py
base_localization/base_localization/: base_localization.py  calib_data_logger_posearray.py  test_marker_pub.py
base_localization/calibration_data/: calib_minimal.csv  calib_minimal_1.csv
base_localization/config/: base_localization.yaml
base_localization/launch/: base_localization.launch.py
base_localization/resource/: base_localization
tello_main/: package.xml  setup.cfg  setup.py
tello_main/config/: params.yaml  rviz.rviz
tello_main/launch/: calib.launch.py  real.launch.py  sim.launch.py
tello_main/resource/: tello_main
tello_main/tello_main/: land_bases_pose_publisher.py  navigator_node.py
